# AiboRosPackages

MS_URBI/: CLIENT.INI  LICENSE  LICENSE.rtf  Makefile.am  URBI.INI  chat.u  compat.u  custom.u  dance.u  dance2.u  ers210.u  ers220.u  ers7.ini  ers7.u  foundtoy.u  motion.u  playrec.u  std.u  swalk.u  swnobsta.u  swpatt.u  swtrans.u  testcpu.u
MS_URBI/OPEN-R/: VERSION.txt
MS_URBI/OPEN-R/SYSTEM/CONF/: WLANDFLT.TXT  WLANDFLT.TXT~
MS_URBI/OPEN-R/SYSTEM/DATA/P/: AIBO-ID
aibo_description/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
aibo_description/launch/: aibomod.launch  aibomod.launch~  rdosddos.launch~
aibo_description/src/: state_publisher.cpp  state_publisher.cpp~
aibo_description/urdf/: Aibo-ers7-2.urdf~  Aibo.gv  Aibo.urdf  Aibo.urdf~  Aibo2.urdf~  urdf.vcg
aibo_server/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
aibo_server/msg/: .IRArray.msg.swp  Accel.msg~  BumperArray.msg  IRArray.msg  Joints.msg  Sound.msg  TouchArray.msg
aibo_server/msg_gen/lisp/: Accel.lisp  Bumper.lisp  BumperArray.lisp  IRArray.lisp  Joints.lisp  Sound.lisp  TouchArray.lisp  _package.lisp  _package_Accel.lisp  _package_Bumper.lisp  _package_BumperArray.lisp  _package_IRArray.lisp  _package_Joints.lisp  _package_Sound.lisp  _package_TouchArray.lisp  aibo_server-msg.asd
aibo_server/src/: AiboNode.cpp  AiboNode.cpp~  AiboNode.h~  AiboParams.h  AiboServer.cpp  AiboServer.cpp~  AiboServer.h  AiboServer.h~  telnetClient.py
aibo_server/src/aibo_server/msg/: _Accel.py  _Bumper.py  _BumperArray.py  (+5 more)
liburbi/: README
liburbi/doc/urbi-sdk/: README
(+10 files in other folders)
