include $(top_srcdir)/build-aux/init.mk
include $(top_srcdir)/aibo.mk

nobase_dist_ers7_DATA = \
  Makefile.am \
  OPEN-R/APERINIT.GZ \
  OPEN-R/APERIOS.GZ \
  OPEN-R/BOOTPARA \
  OPEN-R/EMON.LOG \
  OPEN-R/MW/CONF/CONNECT.CFG \
  OPEN-R/MW/CONF/DESIGN.CFG \
  OPEN-R/MW/CONF/DESIGNDB.CFG \
  OPEN-R/MW/CONF/OBJECT.CFG \
  OPEN-R/MW/CONF/PASSWD \
  OPEN-R/MW/DATA/P/readme.txt \
  OPEN-R/MW/OBJS/readme.txt \
  OPEN-R/SYSTEM/CONF/CARDDRV.CFG \
  OPEN-R/SYSTEM/CONF/EMON.CFG \
  OPEN-R/SYSTEM/CONF/EXTOBJ.CFG \
  OPEN-R/SYSTEM/CONF/OBJECT.CFG \
  OPEN-R/SYSTEM/CONF/WLANDFLT.TXT \
  OPEN-R/SYSTEM/DATA/E/MSWATCH.DAT \
  OPEN-R/SYSTEM/DATA/P/AIBO-ID \
  OPEN-R/SYSTEM/OBJS/ANTTCPIO.BIN \
  OPEN-R/SYSTEM/OBJS/DR.BIN \
  OPEN-R/SYSTEM/OBJS/EMGCYMON.BIN \
  OPEN-R/SYSTEM/OBJS/HOOK.BIN \
  OPEN-R/SYSTEM/OBJS/HOOKACT.BIN \
  OPEN-R/SYSTEM/OBJS/IPSTACK.BIN \
  OPEN-R/SYSTEM/OBJS/NETCONFS.BIN \
  OPEN-R/SYSTEM/OBJS/POWERMGR.BIN \
  OPEN-R/SYSTEM/OBJS/SRVCMGR.BIN \
  OPEN-R/SYSTEM/OBJS/SYSLOG.BIN \
  OPEN-R/SYSTEM/OBJS/VR.BIN \
  OPEN-R/SYSTEM/OBJS/VRAUCOMM.BIN \
  OPEN-R/SYSTEM/OBJS/VRCOMM.BIN \
  OPEN-R/SYSTEM/OBJS/WLANDRV.BIN \
  OPEN-R/SYSTEM/OBJS/WLANDRVM.BIN \
  OPEN-R/SYSTEM/OBJS/WLANENBL.BIN \
  OPEN-R/SYSTEM/VERSION \
  OPEN-R/VERSION.txt \
  URBI.INI \
  dance.u \
  ers7.ini \
  std.u \
  swalk.u
